cmake_minimum_required(VERSION 3.30)
project(LeetCodeProblemsCMake)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCodeProblemsCMake main.cpp
        Auxilary/TreeNode.cpp
        Auxilary/TreeNode.h
        Auxilary/Auxilaries.cpp
        Auxilary/Auxilaries.h
        Problems/BaseProblem.cpp
        Problems/BaseProblem.h
        Auxilary/ScriptNamePrinter.cpp
        Auxilary/ScriptNamePrinter.h
        Problems/LeetCode2559CountVowelStringsInRanges.cpp
        Problems/LeetCode2559CountVowelStringsInRanges.h
        Problems/LeetCode2138DivideAStringIntoGroupsOfSizeK.cpp
        Problems/LeetCode2138DivideAStringIntoGroupsOfSizeK.h
        Problems/LeetCode40CombinationSumII.cpp
        Problems/LeetCode40CombinationSumII.h
        Problems/LeetCode2270NumberOfWaysToSplitArray.cpp
        Problems/LeetCode2270NumberOfWaysToSplitArray.h
        Problems/LeetCode184Sum.cpp
        Problems/LeetCode184Sum.h
        Problems/LeetCode47PermutationsII.cpp
        Problems/LeetCode47PermutationsII.h
        Problems/LeetCode1930UniqueLength3PalindromicSubsequences.cpp
        Problems/LeetCode1930UniqueLength3PalindromicSubsequences.h
        Problems/LeetCode44WildcardMatching.cpp
        Problems/LeetCode44WildcardMatching.h
        Problems/LeetCode60PermutationSequence.cpp
        Problems/LeetCode60PermutationSequence.h
        Auxilary/ListNode.h
        Problems/LeetCode83RemoveDuplicatesFromSortedList.cpp
        Problems/LeetCode83RemoveDuplicatesFromSortedList.h
        Problems/LeetCode65ValidNumber.cpp
        Problems/LeetCode65ValidNumber.h
        Problems/LeetCode881BoatsToSavePeople.cpp
        Problems/LeetCode881BoatsToSavePeople.h
        Problems/LeetCode85MaximalRectangle.cpp
        Problems/LeetCode85MaximalRectangle.h
        Problems/LeetCode2185CountingWordsWithAGivenPrefix.cpp
        Problems/LeetCode2185CountingWordsWithAGivenPrefix.h
        Problems/LeetCode310MinimumHeightTrees.cpp
        Problems/LeetCode310MinimumHeightTrees.h
        Problems/LeetCode1443MinimumTimeToCollectAllApplesInATree.cpp
        Problems/LeetCode1443MinimumTimeToCollectAllApplesInATree.h
        Problems/LeetCode916WordSubsets.cpp
        Problems/LeetCode916WordSubsets.h
        Problems/LeetCode382LinkedListRandomNode.cpp
        Problems/LeetCode382LinkedListRandomNode.h
        Problems/LeetCode1404NumberOfStepsToReduceANumberInBinaryRepresentationToOne.cpp
        Problems/LeetCode1404NumberOfStepsToReduceANumberInBinaryRepresentationToOne.h
        Problems/LeetCode107BinaryTreeLevelOrderTraversalII.cpp
        Problems/LeetCode107BinaryTreeLevelOrderTraversalII.h
        Problems/LeetCode204CountPrimes.cpp
        Problems/LeetCode204CountPrimes.h
        Problems/LeetCode2657FindThePrefixCommonArrayOfTwoArrays.cpp
        Problems/LeetCode2657FindThePrefixCommonArrayOfTwoArrays.h
        Problems/LeetCode535EncodeAndDecodeTinyURL.cpp
        Problems/LeetCode535EncodeAndDecodeTinyURL.h
        Problems/LeetCode109ConvertSortedListToBinarySearchTree.cpp
        Problems/LeetCode109ConvertSortedListToBinarySearchTree.h
        Problems/LeetCode115DistinctSubsequences.cpp
        Problems/LeetCode115DistinctSubsequences.h
        Problems/LeetCode2429MinimizeXOR.cpp
        Problems/LeetCode2429MinimizeXOR.h
        Problems/LeetCode140WordBreakII.cpp
        Problems/LeetCode140WordBreakII.h
        Problems/LeetCode154FindMinimumInRotatedSortedArrayII.cpp
        Problems/LeetCode154FindMinimumInRotatedSortedArrayII.h
        Problems/LeetCode2425BitwiseXOROfAllPairings.cpp
        Problems/LeetCode2425BitwiseXOROfAllPairings.h
        Problems/LeetCode43MultiplyStrings.cpp
        Problems/LeetCode43MultiplyStrings.h
        Problems/LeetCode113PathSumII.cpp
        Problems/LeetCode113PathSumII.h
        Problems/LeetCode2683NeighboringBitwiseXOR.cpp
        Problems/LeetCode2683NeighboringBitwiseXOR.h
        Problems/LeetCode29DivideTwoIntegers.cpp
        Problems/LeetCode29DivideTwoIntegers.h
        Problems/LeetCode214ShortestPalindrome.cpp
        Problems/LeetCode214ShortestPalindrome.h
        Problems/LeetCode743NetworkDelayTime.cpp
        Problems/LeetCode743NetworkDelayTime.h
        Problems/LeetCode980UniquePathsIII.cpp
        Problems/LeetCode980UniquePathsIII.h
        Problems/LeetCode2661FirstCompletelyPaintedRowOrColumn.cpp
        Problems/LeetCode2661FirstCompletelyPaintedRowOrColumn.h
        Problems/LeetCode1267CountServersThatCommunicate.cpp
        Problems/LeetCode1267CountServersThatCommunicate.h
        Problems/LeetCode174DungeonGame.cpp
        Problems/LeetCode174DungeonGame.h
        Problems/LeetCode191NumberOf1Bits.cpp
        Problems/LeetCode191NumberOf1Bits.h
        Problems/LeetCode89GrayCode.cpp
        Problems/LeetCode89GrayCode.h
        Problems/LeetCode802FindEventualSafeStates.cpp
        Problems/LeetCode802FindEventualSafeStates.h
        Problems/LeetCode2658MaximumNumberOfFishInAGrid.cpp
        Problems/LeetCode2658MaximumNumberOfFishInAGrid.h
        Problems/LeetCode684RedundantConnection.cpp
        Problems/LeetCode684RedundantConnection.h
        Problems/GeeksForGeeksAlienDictionary.cpp
        Problems/GeeksForGeeksAlienDictionary.h
        Problems/LeetCode96UniqueBinarySearchTrees.cpp
        Problems/LeetCode96UniqueBinarySearchTrees.h
        Problems/LeetCode1726TupleWithSameProduct.cpp
        Problems/LeetCode1726TupleWithSameProduct.h
        Problems/LeetCode264UglyNumberII.cpp
        Problems/LeetCode264UglyNumberII.h
        Problems/LeetCode3160FindTheNumberOfDistinctColorsAmongTheBalls.cpp
        Problems/LeetCode3160FindTheNumberOfDistinctColorsAmongTheBalls.h
        Problems/LeetCode241DifferentWaysToAddParentheses.cpp
        Problems/LeetCode241DifferentWaysToAddParentheses.h
        Problems/LeetCode116PopulatingNextRightPointersInEachNode.cpp
        Problems/LeetCode116PopulatingNextRightPointersInEachNode.h
        Problems/LeetCode390EliminationGame.cpp
        Problems/LeetCode390EliminationGame.h
        Problems/LeetCode3174ClearDigits.cpp
        Problems/LeetCode3174ClearDigits.h
        Problems/LeetCode1980FindUniqueBinaryString.cpp
        Problems/LeetCode1980FindUniqueBinaryString.h
        Problems/LeetCode1261FindElementsInAContaminatedBinaryTree.cpp
        Problems/LeetCode1261FindElementsInAContaminatedBinaryTree.h
        Problems/LeetCode1524NumberOfSubarraysWithOddSum.cpp
        Problems/LeetCode1524NumberOfSubarraysWithOddSum.h
        Problems/LeetCode873LengthOfLongestFibonacciSubsequence.cpp
        Problems/LeetCode873LengthOfLongestFibonacciSubsequence.h
        Problems/LeetCode1780CheckIfNumberIsASumOfPowersOfThree.cpp
        Problems/LeetCode1780CheckIfNumberIsASumOfPowersOfThree.h
        Problems/LeetCode2965FindMissingAndRepeatedValues.cpp
        Problems/LeetCode2965FindMissingAndRepeatedValues.h
        Problems/LeetCode2379MinimumRecolorsToGetKConsecutiveBlackBlocks.cpp
        Problems/LeetCode2379MinimumRecolorsToGetKConsecutiveBlackBlocks.h
        Problems/LeetCode3208AlternatingGroupsII.cpp
        Problems/LeetCode3208AlternatingGroupsII.h
        Problems/LeetCode3356ZeroArrayTransformationII.cpp
        Problems/LeetCode3356ZeroArrayTransformationII.h
        Problems/LeetCode2226MaximumCandiesAllocatedToKChildren.cpp
        Problems/LeetCode2226MaximumCandiesAllocatedToKChildren.h
        Problems/LeetCode2206DivideArrayIntoEqualPairs.cpp
        Problems/LeetCode2206DivideArrayIntoEqualPairs.h
        Problems/LeetCode235LowestCommonAncestorOfABinarySearchTree.cpp
        Problems/LeetCode235LowestCommonAncestorOfABinarySearchTree.h
        Problems/LeetCode318MaximumProductOfWordLengths.cpp
        Problems/LeetCode318MaximumProductOfWordLengths.h
        Problems/LeetCode99RecoverBinarySearchTree.cpp
        Problems/LeetCode99RecoverBinarySearchTree.h
        Problems/LeetCode2401LongestNiceSubarray.cpp
        Problems/LeetCode2401LongestNiceSubarray.h
        Problems/LeetCode3191MinimumOperationsToMakeBinaryArrayElementsEqualToOneI.cpp
        Problems/LeetCode3191MinimumOperationsToMakeBinaryArrayElementsEqualToOneI.h
        Problems/LeetCode93RestoreIPAddresses.cpp
        Problems/LeetCode93RestoreIPAddresses.h
        Problems/LeetCode95UniqueBinarySearchTreesII.cpp
        Problems/LeetCode95UniqueBinarySearchTreesII.h
        Problems/LeetCode2685CountTheNumberOfCompleteComponents.cpp
        Problems/LeetCode2685CountTheNumberOfCompleteComponents.h
        Problems/LeetCode337HouseRobberIII.cpp
        Problems/LeetCode337HouseRobberIII.h
        Problems/LeetCode3169CountDaysWithoutMeetings.cpp
        Problems/LeetCode3169CountDaysWithoutMeetings.h
        Problems/LeetCode2780MinimumIndexOfAValidSplit.cpp
        Problems/LeetCode2780MinimumIndexOfAValidSplit.h
        Problems/LeetCode2503MaximumNumberOfPointsFromGridQueries.cpp
        Problems/LeetCode2503MaximumNumberOfPointsFromGridQueries.h
        Problems/LeetCode2140SolvingQuestionsWithBrainpower.cpp
        Problems/LeetCode2140SolvingQuestionsWithBrainpower.h
        Problems/LeetCode147InsertionSortList.cpp
        Problems/LeetCode147InsertionSortList.h
        Problems/LeetCode2873MaximumValueOfAnOrderedTripletI.cpp
        Problems/LeetCode2873MaximumValueOfAnOrderedTripletI.h
        Problems/LeetCode2843CountSymmetricIntegers.cpp
        Problems/LeetCode2843CountSymmetricIntegers.h
        Problems/LeetCode2537CountTheNumberOfGoodSubarrays.cpp
        Problems/LeetCode2537CountTheNumberOfGoodSubarrays.h
        Problems/LeetCode2176CountEqualAndDivisiblePairsInAnArray.cpp
        Problems/LeetCode2176CountEqualAndDivisiblePairsInAnArray.h
        Problems/LeetCode2563CountTheNumberOfFairPairs.cpp
        Problems/LeetCode2563CountTheNumberOfFairPairs.h
        Problems/LeetCode1399CountLargestGroup.cpp
        Problems/LeetCode1399CountLargestGroup.h
        Problems/LeetCode2799CountCompleteSubarraysInAnArray.cpp
        Problems/LeetCode2799CountCompleteSubarraysInAnArray.h
        Problems/LeetCode2845CountOfInterestingSubarrays.cpp
        Problems/LeetCode2845CountOfInterestingSubarrays.h
        Problems/LeetCode3392CountSubarraysOfLengthThreeWithACondition.cpp
        Problems/LeetCode3392CountSubarraysOfLengthThreeWithACondition.h
        Problems/LeetCode2444CountSubarraysWithFixedBounds.cpp
        Problems/LeetCode2444CountSubarraysWithFixedBounds.h
        Problems/LeetCode2302CountSubarraysWithScoreLessThanK.cpp
        Problems/LeetCode2302CountSubarraysWithScoreLessThanK.h
        Problems/LeetCode2962CountSubarraysWhereMaxElementAppearsAtLeastKTimes.cpp
        Problems/LeetCode2962CountSubarraysWhereMaxElementAppearsAtLeastKTimes.h
        Problems/LeetCode1295FindNumbersWithEvenNumberOfDigits.cpp
        Problems/LeetCode1295FindNumbersWithEvenNumberOfDigits.h
        Problems/LeetCode838PushDominoes.cpp
        Problems/LeetCode838PushDominoes.h
        Problems/LeetCode1128NumberOfEquivalentDominoPairs.cpp
        Problems/LeetCode1128NumberOfEquivalentDominoPairs.h
        Problems/LeetCode1920BuildArrayFromPermutation.cpp
        Problems/LeetCode1920BuildArrayFromPermutation.h
        Problems/LeetCode3341FindMinimumTimeToReachLastRoomI.cpp
        Problems/LeetCode3341FindMinimumTimeToReachLastRoomI.h
        Problems/LeetCode3342FindMinimumTimeToReachLastRoomII.cpp
        Problems/LeetCode3342FindMinimumTimeToReachLastRoomII.h
        Problems/LeetCode2918MinimumEqualSumOfTwoArraysAfterReplacingZeros.cpp
        Problems/LeetCode2918MinimumEqualSumOfTwoArraysAfterReplacingZeros.h
        Problems/LeetCode1550ThreeConsecutiveOdds.cpp
        Problems/LeetCode1550ThreeConsecutiveOdds.h
        Problems/LeetCode2094Finding3DigitEvenNumbers.cpp
        Problems/LeetCode2094Finding3DigitEvenNumbers.h
        Problems/LeetCode3335TotalCharactersInStringAfterTransformationsI.cpp
        Problems/LeetCode3335TotalCharactersInStringAfterTransformationsI.h
        Problems/LeetCode260SingleNumberIII.cpp
        Problems/LeetCode260SingleNumberIII.h
        Problems/LeetCode2900LongestUnequalAdjacentGroupsSubsequenceI.cpp
        Problems/LeetCode2900LongestUnequalAdjacentGroupsSubsequenceI.h
        Problems/LeetCode3024TypeOfTriangle.cpp
        Problems/LeetCode3024TypeOfTriangle.h
        Problems/GeeksForGeeksTravellingSalesmanProblem.cpp
        Problems/GeeksForGeeksTravellingSalesmanProblem.h
        Problems/LeetCode847ShortestPathVisitingAllNodes.cpp
        Problems/LeetCode847ShortestPathVisitingAllNodes.h
        Problems/LeetCode3355ZeroArrayTransformationI.cpp
        Problems/LeetCode3355ZeroArrayTransformationI.h
        Problems/LeetCode2942FindWordsContainingCharacter.cpp
        Problems/LeetCode2942FindWordsContainingCharacter.h
        Problems/LeetCode2894DivisibleAndNondivisibleSumsDifference.cpp
        Problems/LeetCode2894DivisibleAndNondivisibleSumsDifference.h
        Problems/LeetCode3372MaximizeTheNumberOfTargetNodesAfterConnectingTreesI.cpp
        Problems/LeetCode3372MaximizeTheNumberOfTargetNodesAfterConnectingTreesI.h
        Problems/LeetCode3373MaximizeTheNumberOfTargetNodesAfterConnectingTreesII.cpp
        Problems/LeetCode3373MaximizeTheNumberOfTargetNodesAfterConnectingTreesII.h
        Problems/LeetCode2359FindClosestNodeToGivenTwoNodes.cpp
        Problems/LeetCode2359FindClosestNodeToGivenTwoNodes.h
        Problems/LeetCode2131LongestPalindromeByConcatenatingTwoLetterWords.cpp
        Problems/LeetCode2131LongestPalindromeByConcatenatingTwoLetterWords.h
        Problems/LeetCode2929DistributeCandiesAmongChildrenII.cpp
        Problems/LeetCode2929DistributeCandiesAmongChildrenII.h
        Problems/LeetCode187RepeatedDNASequences.cpp
        Problems/LeetCode187RepeatedDNASequences.h
        Problems/LeetCode1298MaximumCandiesYouCanGetFromBoxes.cpp
        Problems/LeetCode1298MaximumCandiesYouCanGetFromBoxes.h
        Problems/LeetCode3403FindTheLexicographicallyLargestStringFromTheBoxI.cpp
        Problems/LeetCode3403FindTheLexicographicallyLargestStringFromTheBoxI.h
        Problems/LeetCode1061LexicographicallySmallestEquivalentString.cpp
        Problems/LeetCode1061LexicographicallySmallestEquivalentString.h
        Problems/LeetCode2434UsingARobotToPrintTheLexicographicallySmallestString.cpp
        Problems/LeetCode2434UsingARobotToPrintTheLexicographicallySmallestString.h
        Problems/LeetCode3170LexicographicallyMinimumStringAfterRemovingStars.cpp
        Problems/LeetCode3170LexicographicallyMinimumStringAfterRemovingStars.h
        Problems/LeetCode386LexicographicalNumbers.cpp
        Problems/LeetCode386LexicographicalNumbers.h
        Problems/LeetCode3442MaximumDifferenceBetweenEvenAndOddFrequencyI.cpp
        Problems/LeetCode3442MaximumDifferenceBetweenEvenAndOddFrequencyI.h
        Problems/LeetCode3423MaximumDifferenceBetweenAdjacentElementsInACircularArray.cpp
        Problems/LeetCode3423MaximumDifferenceBetweenAdjacentElementsInACircularArray.h
        Problems/LeetCode440KthSmallestInLexicographicalOrder.cpp
        Problems/LeetCode440KthSmallestInLexicographicalOrder.h
        Problems/LeetCode223RectangleArea.cpp
        Problems/LeetCode223RectangleArea.h
        Problems/LeetCode513FindBottomLeftTreeValue.cpp
        Problems/LeetCode513FindBottomLeftTreeValue.h
        Problems/LeetCode419BattleshipsInABoard.cpp
        Problems/LeetCode419BattleshipsInABoard.h
        Problems/LeetCode1498NumberOfSubsequencesThatSatisfyTheGivenSumCondition.cpp
        Problems/LeetCode1498NumberOfSubsequencesThatSatisfyTheGivenSumCondition.h
        Problems/LeetCode594LongestHarmoniousSubsequence.cpp
        Problems/LeetCode594LongestHarmoniousSubsequence.h
        Problems/LeetCode229MajorityElementII.cpp
        Problems/LeetCode229MajorityElementII.h
        Problems/LeetCode429NaryTreeLevelOrderTraversal.cpp
        Problems/LeetCode429NaryTreeLevelOrderTraversal.h
        Problems/LeetCode3330FindTheOriginalTypedStringI.cpp
        Problems/LeetCode3330FindTheOriginalTypedStringI.h
        Problems/LeetCode144BinaryTreePreorderTraversal.cpp
        Problems/LeetCode144BinaryTreePreorderTraversal.h
        Problems/LeetCode3333FindTheOriginalTypedStringII.cpp
        Problems/LeetCode3333FindTheOriginalTypedStringII.h
        Problems/LeetCode3304FindTheKthCharacterInStringGameI.cpp
        Problems/LeetCode3304FindTheKthCharacterInStringGameI.h
        Problems/LeetCode1394FindLuckyIntegerInAnArray.cpp
        Problems/LeetCode1394FindLuckyIntegerInAnArray.h
        Problems/LeetCode1865FindingPairsWithACertainSum.cpp
        Problems/LeetCode1865FindingPairsWithACertainSum.h
        Problems/LeetCode1353MaximumNumberOfEventsThatCanBeAttended.cpp
        Problems/LeetCode1353MaximumNumberOfEventsThatCanBeAttended.h
        Problems/LeetCode1751MaximumNumberOfEventsThatCanBeAttendedII.cpp
        Problems/LeetCode1751MaximumNumberOfEventsThatCanBeAttendedII.h
        Problems/LeetCode3440RescheduleMeetingsForMaximumFreeTimeII.cpp
        Problems/LeetCode3440RescheduleMeetingsForMaximumFreeTimeII.h
        Problems/LeetCode2402MeetingRoomsIII.cpp
        Problems/LeetCode2402MeetingRoomsIII.h
        Problems/LeetCode2410MaximumMatchingOfPlayersWithTrainers.cpp
        Problems/LeetCode2410MaximumMatchingOfPlayersWithTrainers.h
        Problems/LeetCode1948DeleteDuplicateFoldersInSystem.cpp
        Problems/LeetCode1948DeleteDuplicateFoldersInSystem.h
        Problems/LeetCode3487MaximumUniqueSubarraySumAfterDeletion.cpp
        Problems/LeetCode3487MaximumUniqueSubarraySumAfterDeletion.h
        Problems/LeetCode898BitwiseORsOfSubarrays.cpp
        Problems/LeetCode898BitwiseORsOfSubarrays.h
        Problems/LeetCode2561RearrangingFruits.cpp
        Problems/LeetCode2561RearrangingFruits.h
        Problems/LeetCode3363FindTheMaximumNumberOfFruitsCollected.cpp
        Problems/LeetCode3363FindTheMaximumNumberOfFruitsCollected.h
        Problems/LeetCode808SoupServings.cpp
        Problems/LeetCode808SoupServings.h
        Problems/LeetCode2264Largest3SameDigitNumberInString.cpp
        Problems/LeetCode2264Largest3SameDigitNumberInString.h
        Problems/LeetCode342PowerOfFour.cpp
        Problems/LeetCode342PowerOfFour.h
        Problems/LeetCode837New21Game.cpp
        Problems/LeetCode837New21Game.h
        Problems/LeetCode67924Game.cpp
        Problems/LeetCode67924Game.h
        Problems/LeetCode1493LongestSubarrayOf1sAfterDeletingOneElement.cpp
        Problems/LeetCode1493LongestSubarrayOf1sAfterDeletingOneElement.h
        Problems/LeetCode3195FindTheMinimumAreaToCoverAllOnesI.cpp
        Problems/LeetCode3195FindTheMinimumAreaToCoverAllOnesI.h
        Problems/LeetCode421MaximumXOROfTwoNumbersInAnArray.cpp
        Problems/LeetCode421MaximumXOROfTwoNumbersInAnArray.h
        Problems/LeetCode3446SortMatrixByDiagonals.cpp
        Problems/LeetCode3446SortMatrixByDiagonals.h
        Problems/LeetCode3021AliceAndBobPlayingFlowerGame.cpp
        Problems/LeetCode3021AliceAndBobPlayingFlowerGame.h
        Problems/LeetCode1792MaximumAveragePassRatio.cpp
        Problems/LeetCode1792MaximumAveragePassRatio.h
        Problems/LeetCode3516FindClosestPerson.cpp
        Problems/LeetCode3516FindClosestPerson.h
        Problems/LeetCode475Heaters.cpp
        Problems/LeetCode475Heaters.h
        Problems/LeetCode2749MinimumOperationsToMakeTheIntegerZero.cpp
        Problems/LeetCode2749MinimumOperationsToMakeTheIntegerZero.h
        Problems/LeetCode3408DesignTaskManager.cpp
        Problems/LeetCode3408DesignTaskManager.h
        Problems/LeetCode3484DesignSpreadsheet.cpp
        Problems/LeetCode3484DesignSpreadsheet.h
        Problems/LeetCode1912DesignMovieRentalSystem.cpp
        Problems/LeetCode1912DesignMovieRentalSystem.h
        Problems/LeetCode1774ClosestDessertCost.cpp
        Problems/LeetCode1774ClosestDessertCost.h
        Problems/LeetCode166FractionToRecurringDecimal.cpp
        Problems/LeetCode166FractionToRecurringDecimal.h
        Problems/LeetCode1834SingleThreadedCPU.cpp
        Problems/LeetCode1834SingleThreadedCPU.h
        Problems/LeetCode611ValidTriangleNumber.cpp
        Problems/LeetCode611ValidTriangleNumber.h
        Problems/LeetCode812LargestTriangleArea.cpp
        Problems/LeetCode812LargestTriangleArea.h
        Problems/LeetCode976LargestPerimeterTriangle.cpp
        Problems/LeetCode976LargestPerimeterTriangle.h
        Problems/LeetCode1039MinimumScoreTriangulationOfPolygon.cpp
        Problems/LeetCode1039MinimumScoreTriangulationOfPolygon.h
        Problems/LeetCode2221FindTriangularSumOfAnArray.cpp
        Problems/LeetCode2221FindTriangularSumOfAnArray.h
        Problems/LeetCode1518WaterBottles.cpp
        Problems/LeetCode1518WaterBottles.h
        Problems/LeetCode3100WaterBottlesII.cpp
        Problems/LeetCode3100WaterBottlesII.h
        Problems/LeetCode1115PrintFooBarAlternately.cpp
        Problems/LeetCode1115PrintFooBarAlternately.h
        Problems/LeetCode3603MinimumCostPathWithAlternatingDirectionsII.cpp
        Problems/LeetCode3603MinimumCostPathWithAlternatingDirectionsII.h
        Problems/LeetCode778SwimInRisingWater.cpp
        Problems/LeetCode778SwimInRisingWater.h
        Problems/LeetCode778SwimInRisingWater.cpp
        Problems/LeetCode1432MaxDifferenceYouCanGetFromChangingAnInteger.cpp
        Problems/LeetCode1432MaxDifferenceYouCanGetFromChangingAnInteger.h
        Problems/LeetCode1488AvoidFloodInTheCity.cpp
        Problems/LeetCode1488AvoidFloodInTheCity.h
        Problems/LeetCode621TaskScheduler.cpp
        Problems/LeetCode621TaskScheduler.h
        Problems/LeetCode3494FindTheMinimumAmountOfTimeToBrewPotions.cpp
        Problems/LeetCode3494FindTheMinimumAmountOfTimeToBrewPotions.h
        Problems/LeetCode3147TakingMaximumEnergyFromTheMysticDungeon.cpp
        Problems/LeetCode3147TakingMaximumEnergyFromTheMysticDungeon.h
        Problems/LeetCode3186MaximumTotalDamageWithSpellCasting.cpp
        Problems/LeetCode3186MaximumTotalDamageWithSpellCasting.h
        Problems/LeetCode2273FindResultantArrayAfterRemovingAnagrams.cpp
        Problems/LeetCode2273FindResultantArrayAfterRemovingAnagrams.h
        Problems/LeetCode2273FindResultantArrayAfterRemovingAnagrams.cpp
        Problems/LeetCode3349AdjacentIncreasingSubarraysDetectionI.cpp
        Problems/LeetCode3349AdjacentIncreasingSubarraysDetectionI.h
        Problems/LeetCode2598SmallestMissingNonnegativeIntegerAfterOperations.cpp
        Problems/LeetCode2598SmallestMissingNonnegativeIntegerAfterOperations.h
        Problems/LeetCode3397MaximumNumberOfDistinctElementsAfterOperations.cpp
        Problems/LeetCode3397MaximumNumberOfDistinctElementsAfterOperations.h
        Problems/LeetCode1625LexicographicallySmallestStringAfterApplyingOperations.cpp
        Problems/LeetCode1625LexicographicallySmallestStringAfterApplyingOperations.h
        Problems/LeetCode3461CheckIfDigitsAreEqualInStringAfterOperationsI.cpp
        Problems/LeetCode3461CheckIfDigitsAreEqualInStringAfterOperationsI.h
        Problems/LeetCode3347MaximumFrequencyOfAnElementAfterPerformingOperationsII.cpp
        Problems/LeetCode3347MaximumFrequencyOfAnElementAfterPerformingOperationsII.h
        Problems/LeetCode2048NextGreaterNumericallyBalancedNumber.cpp
        Problems/LeetCode2048NextGreaterNumericallyBalancedNumber.h
        Problems/LeetCode3370SmallestNumberWithAllSetBits.cpp
        Problems/LeetCode3370SmallestNumberWithAllSetBits.h
        Problems/LeetCode1526MinimumNumberOfIncrementsOnSubarraysToFormATargetArray.cpp
        Problems/LeetCode1526MinimumNumberOfIncrementsOnSubarraysToFormATargetArray.h
        Problems/LeetCode3289TheTwoSneakyNumbersOfDigitville.cpp
        Problems/LeetCode3289TheTwoSneakyNumbersOfDigitville.h
        Problems/LeetCode2169CountOperationsToObtainZero.cpp
        Problems/LeetCode2169CountOperationsToObtainZero.h
        Problems/LeetCode3542MinimumOperationsToConvertAllElementsToZero.cpp
        Problems/LeetCode3542MinimumOperationsToConvertAllElementsToZero.h
        Problems/LeetCode474OnesAndZeroes.cpp
        Problems/LeetCode474OnesAndZeroes.h
        Problems/LeetCode2654MinimumNumberOfOperationsToMakeAllArrayElementsEqualTo1.cpp
        Problems/LeetCode2654MinimumNumberOfOperationsToMakeAllArrayElementsEqualTo1.h
        Problems/LeetCode3228MaximumNumberOfOperationsToMoveOnesToTheEnd.cpp
        Problems/LeetCode3228MaximumNumberOfOperationsToMoveOnesToTheEnd.h
        Problems/LeetCodeConcatenationOfArray.cpp
        Problems/LeetCodeConcatenationOfArray.h
)
